# deepiri-fuselk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  VISION.md  pyproject.toml  setup.sh
.git-hooks/: pre-push
.github/: pull_request_template.md
.github/codeql/: README.md  codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
.pdf-genesis/: manifest.json
config/: data_sources.yaml
deployment/: Dockerfile  docker-compose.yml
docs/: DATA_PIPELINE.md  RELEASE.md  STACK.md  architecture.md
docs/theory/: helix_hqrm.md  hqrm_benchmark.md  muon_rate_network.md  muon_validation.md  oil_water_pde.md  pde_wellposedness.md  rl_convergence.md
experiments/: registry.yaml
experiments/lab/: brine_wall.py
experiments/reactor/: tritium_vapor_loop.py
notebooks/: 00_fuselk_vision_overview.ipynb  01_oil_water_barrier_math.ipynb  02_helix_hqrm_diagnostics.ipynb  03_muon_tritium_fuel_cycle.ipynb  04_venturi_control_experiments.ipynb  05_reactor_cell_digital_twin.ipynb  06_unified_cross_domain_mathematics.ipynb  tutorial_01_oil_water_pde.ipynb  tutorial_02_muon_catalytic_cycle.ipynb  tutorial_03_helix_denoising.ipynb  tutorial_04_full_twin.ipynb
packaging/: fuselk.spec  fuselk_entry.py
scripts/: benchmark.py  fetch_data.py  generate_notebooks.py  validate_claims.py
scripts/ci/: build-release.sh
src/deepiri_fuselk/: __init__.py  cli.py
src/deepiri_fuselk/barrier/: __init__.py  breeding_blanket.py  heat_exhaust.py  phase_separator.py  vapor_dynamics.py
src/deepiri_fuselk/control/: __init__.py  convergence.py  plasma_traffic_router.py  policy_runner.py  realtime_bus.py  rl_agent.py  vent_circularizer_env.py  venturi_controller.py  watchdog.py
src/deepiri_fuselk/data/: __init__.py  hdf5_store.py  imas_loader.py  normalize.py  notebook_loaders.py  schemas.py  sources.py
src/deepiri_fuselk/experiments/: __init__.py  registry.py  runner.py
src/deepiri_fuselk/focal/: __init__.py  focal_heatmap.py  lockin_amplifier.py  spiral_attention.py
src/deepiri_fuselk/helix/: __init__.py  coordinate_mapper.py  helical_quadtree.py  helix_engine.py  jax_hqrm.py  jax_mapper.py  kalman_tracker.py
src/deepiri_fuselk/models/: __init__.py  bayesian_prior.py  disruption_detector.py  (+2 more)
tests/fixtures/: odl_sample.csv
tests/integration/: test_digital_twin.py
tests/unit/: test_barrier.py  test_benchmark_script.py  test_branding.py  test_claims_validation.py  test_control.py  test_desktop_gui.py  test_experiments.py  test_fetch_data.py  test_fuel_cycle_context.py  test_helix.py  test_lockin.py  test_muon.py  test_notebook_loaders.py  test_physics.py  test_policy_runner.py  test_reactor.py  test_shot_pipeline.py  test_vision_alignment.py  test_vision_modules.py  test_viz_api.py  test_viz_simulation.py
(+53 files in other folders)
