[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "deepiri-fuselk"
version = "0.5.0"
description = "Fusion Unified Simulation, ELM Learning & Kinetics — open tokamak plasma control platform"
authors = ["Deepiri <research@deepiri.ai>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/Team-Deepiri/deepiri-fuselk"
keywords = ["fusion", "tokamak", "elm", "plasma", "simulation", "reinforcement-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache License 2.0",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{ include = "deepiri_fuselk", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = "^1.26"
scipy = "^1.12"
xarray = "^2024.1"
h5py = "^3.10"
pydantic = "^2.6"
typer = ">=0.15"
rich = "^13.7"
plotly = "^5.18"
dash = "^2.14"
fastapi = "^0.110"
uvicorn = { extras = ["standard"], version = "^0.29" }
gymnasium = "^0.29"
stable-baselines3 = "^2.3"
pyzmq = "^25.1"
pyarrow = "^15.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
ruff = "^0.3"
mypy = "^1.9"
jupyter = "^1.0"
ipykernel = "^6.29"
matplotlib = "^3.8"
nbformat = "^5.10"
sympy = "^1.12"

[tool.poetry.group.jax]
optional = true
[tool.poetry.group.jax.dependencies]
jax = "^0.4"
equinox = "^0.11"
optax = "^0.2"

[tool.poetry.group.torch]
optional = true
[tool.poetry.group.torch.dependencies]
torch = "^2.2"

[tool.poetry.group.rl]
optional = true
[tool.poetry.group.rl.dependencies]
# SB3 now in main deps; group kept for optional torch extras later

[tool.poetry.group.desktop]
optional = true
[tool.poetry.group.desktop.dependencies]
PySide6 = "^6.6"
PySide6-Addons = "^6.6"

[tool.poetry.scripts]
fuselk = "deepiri_fuselk.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = [
    "E501",
    "N806",
    "N803",
    "N802",
    "N815",
    "E741",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "slow: marks tests as slow",
    "gpu: marks tests requiring GPU",
    "integration: marks integration tests",
]
